[gd_scene load_steps=22 format=2]

[ext_resource path="res://Actors/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Actors/Scripts/Rider.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 1, 1, 0.313726 )
albedo_texture = ExtResource( 3 )
uv1_offset = Vector3( 0.5, 0, 0 )

[sub_resource type="SphereMesh" id=3]
material = SubResource( 2 )
radius = 0.5
height = 1.0
radial_segments = 16
rings = 8

[sub_resource type="CubeMesh" id=4]
size = Vector3( 1, 0.1, 3 )

[sub_resource type="PrismMesh" id=5]
size = Vector3( 0.5, 0.5, 0.1 )

[sub_resource type="CapsuleShape" id=6]
radius = 0.25
height = 0.5

[sub_resource type="CapsuleMesh" id=7]
radius = 0.25
mid_height = 0.5
radial_segments = 16
rings = 2

[sub_resource type="SphereShape" id=10]
radius = 1.5

[sub_resource type="PrismMesh" id=8]
size = Vector3( 0.5, 0.5, 0.2 )

[sub_resource type="CylinderMesh" id=9]
top_radius = 0.1
bottom_radius = 0.05
height = 1.0
radial_segments = 4
rings = 1

[sub_resource type="Curve" id=13]
bake_resolution = 32
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
params_billboard_mode = 2
albedo_texture = SubResource( 14 )
distance_fade_mode = 1
distance_fade_min_distance = 13.0
distance_fade_max_distance = 22.0

[sub_resource type="QuadMesh" id=12]
material = SubResource( 15 )
size = Vector2( 2, 1 )

[sub_resource type="OpenSimplexNoise" id=18]

[sub_resource type="NoiseTexture" id=19]
width = 1024
height = 256
noise = SubResource( 18 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
flags_unshaded = true
params_specular_mode = 4
params_billboard_mode = 1
albedo_texture = SubResource( 19 )

[sub_resource type="QuadMesh" id=17]
material = SubResource( 16 )
size = Vector2( 4, 1 )

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="Rider" type="KinematicBody" parent="."]
collision_mask = 16
script = ExtResource( 2 )

[node name="TransformCam" type="RemoteTransform" parent="Rider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
remote_path = NodePath("../../CamJoint")
update_rotation = false
update_scale = false

[node name="TransformNormalArrow" type="RemoteTransform" parent="Rider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
remote_path = NodePath("../../NormalJoint")
update_rotation = false
update_scale = false

[node name="TransformBillboard" type="RemoteTransform" parent="Rider"]
remote_path = NodePath("../../InfoBillboard")

[node name="Meshes" type="Spatial" parent="Rider"]

[node name="Body" type="MeshInstance" parent="Rider/Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Head" type="MeshInstance" parent="Rider/Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Board" type="MeshInstance" parent="Rider/Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="EditorArrow" type="MeshInstance" parent="Rider/Meshes"]
transform = Transform( -1, 8.74228e-08, 1.42432e-14, 0, -1.62921e-07, 1, 8.74228e-08, 1, 1.62921e-07, 1.62921e-07, 0.5, 1 )
mesh = SubResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Rider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Rider/CollisionShape"]
mesh = SubResource( 7 )
material/0 = null

[node name="FinishDetector" type="Area" parent="Rider"]
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Rider/FinishDetector"]
shape = SubResource( 10 )

[node name="CamJoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="CamJoint"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 5, 0, 0 )
current = true
fov = 80.0
far = 500.0

[node name="NormalJoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="NormalArrow" type="MeshInstance" parent="NormalJoint"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 2.5, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="ArrowStem" type="MeshInstance" parent="NormalJoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75282, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="InfoBillboard" type="Spatial" parent="."]

[node name="Rank" type="MeshInstance" parent="InfoBillboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4, 0 )
mesh = SubResource( 12 )
material/0 = null

[node name="Time" type="MeshInstance" parent="InfoBillboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0 )
mesh = SubResource( 17 )
material/0 = null

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="Margin" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="UI/Margin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0

[node name="VBoxL" type="VBoxContainer" parent="UI/Margin/HBox"]
margin_right = 116.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI/Margin/HBox/VBoxL"]
margin_right = 116.0
margin_bottom = 14.0
size_flags_vertical = 0
text = "Time: 00:00:00.00"

[node name="Speed" type="Label" parent="UI/Margin/HBox/VBoxL"]
margin_top = 562.0
margin_right = 116.0
margin_bottom = 576.0
size_flags_vertical = 10
text = "Speed: 75 km/s"

[node name="VBoxR" type="VBoxContainer" parent="UI/Margin/HBox"]
margin_left = 901.0
margin_right = 1000.0
margin_bottom = 576.0
size_flags_horizontal = 10

[node name="Rank" type="Label" parent="UI/Margin/HBox/VBoxR"]
margin_right = 99.0
margin_bottom = 14.0
size_flags_vertical = 0
text = "1st place"
align = 2
valign = 1

[node name="Score" type="Label" parent="UI/Margin/HBox/VBoxR"]
margin_top = 18.0
margin_right = 99.0
margin_bottom = 32.0
size_flags_vertical = 0
text = "Score: 2602600"
align = 2

[node name="JumpInt" type="Label" parent="UI/Margin/HBox/VBoxR"]
margin_top = 562.0
margin_right = 99.0
margin_bottom = 576.0
size_flags_vertical = 10
text = "-1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="ProgressBar" parent="UI/Margin/HBox/VBoxR/JumpInt"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 10
min_value = -1.0
max_value = 1.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Rider/FinishDetector" to="." method="_on_FinishDetector_area_entered"]
